2004-03-20 08:13  PeterB

	* libbalsa/mailbox_imap.c: (libbalsa_mailbox_imap_messages_copy)
	allow NULL search_iter.
	* libbalsa/: mailbox.c, message.c: use bulk copy and move methods.
	* src/balsa-index.c: use a LibBalsaMailboxSearchIter, to allow
	caching of search results.
	* libbalsa/: mailbox.c, mailbox.h: implement
	libbalsa_mailbox_search_iter_view.

2004-03-19 21:51  PeterB

	* src/: balsa-index.c, balsa-index.h: maintain list of selected
	messages; check a message that leaves the list against the current
	view-filter; keep multiple selections.
	* libbalsa/mailbox_local.c: check the msg_tree when changing
	view-filter.
	* libbalsa/: mailbox.c, mailbox.h: implement
	libbalsa_mailbox_msgno_deselected.
	* libbalsa/: mailbox_maildir.c, mailbox_mh.c: be more careful
	dereferencing message info array.

2004-03-18  Pawel Salek

	* libbalsa/mailbox_imap.c: process flags in batches.
	* libbalsa/imap/imap-commands.c: send batches of flags via imap_cb
	* libbalsa/imap/imap-handle.c: similarly here.
	* libbalsa/imap/imap-handle.h: change imap_cb typedef.

2004-03-16 17:13  PeterB

	* libbalsa/mailbox.c: show unread status of deleted messages.
	* libbalsa/mailbox.c: set the value even if the tree-view is not
	realized.

2004-03-15 15:02  PeterB

	* src/balsa-index.c: don't connect to mailbox's "row-changed"
	signal--"changed" is enough.
	* src/balsa-mblist.c: update total messages when mailbox is closed.
	* libbalsa/: message.c, message.h: check that flags really change.
	* libbalsa/: mailbox_maildir.c, mailbox_mbox.c, mailbox_mh.c:
	signal new mailbox size when closing.
	* libbalsa/mailbox_local.c: don't emit signal; set unread-messages
	flag only if new mail arrived.
	* libbalsa/mailbox.c: check that message flags really change.

2004-03-14 09:15  PeterB

	* src/balsa-mblist.c: connect to mailbox's "changed" signal instead
	of "set-unread-messages-flag" and "messages-status-changed".
	* libbalsa/message.c: libbalsa_mailbox_copy_message returns +/-1,
	not TRUE/FALSE.