@@ -1,3 +1,10 @@
+2004-03-22  Pawel Salek
+
+	* libbalsa/libbalsa.c: release gdk lock when waiting for mailbox
+	lock.
+	* libbalsa/mailbox{,_imap}.c: update counters in an idle function.
+	* src/main-window.c: show message source without preview active.
+
 2004-03-20 08:13  PeterB
 
 	* libbalsa/mailbox_imap.c: (libbalsa_mailbox_imap_messages_copy)
